@startuml

User "1" --> "many" MealPlan
User  *-- "1" Ingredients
User "many" *-- "1" Diet
MealPlan "many" <-- "1" Meal
Meal "many" *-- "1" Diet
Meal "many" *-- "1" Category
Meal "1" -- "many" MealIngredientAs
MealIngredientAs "many" -- "1" Ingredients

class User {
    Long id
        String email;
        String firstname;
        String lastname;
        String dietid;
        String exclude;
        LocalDateTime dateadded;
}

class Meal{
    Long id;
    String name;
    String shortdesc;
    String longdesc;
    String category;
    int preptime;
    int servings;
    String diet;
    String photo;
    String url;
    LocalDateTime dateadded;
}

class MealPlan{
    Long id;
    int userid;
    int mealid;
    LocalDateTime date;
}

class Diet{
    Long id;
    String name;
}

class Category{
    Long id;
    String name;
}

class Ingredients{
    Long id;
    String name;
    int calories;
    int carbohydrates;
    int fat;
    int protein;
    String photo;
}

class MealIngredientAs{
    Long id;
    int mealid;
    int ingredeintid;
    int quantity;
}

@enduml